# CrystalSpatial

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: classes.d2  structral_design.md  todo.md
doc/doxygen/html/: annotated.html  annotated_dup.js  classcrystal_1_1spatial_1_1_position-members.html  classcrystal_1_1spatial_1_1_position.html  classcrystal_1_1spatial_1_1_sub_space-members.html  classcrystal_1_1spatial_1_1_sub_space.html  classes.html  constants_8h_source.html  dir_1227c8b612737aad07703f9c59489eb8.html  dir_1227c8b612737aad07703f9c59489eb8.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0bad48706c4fb39c61640d562b1d9cf.html  dir_b0bad48706c4fb39c61640d562b1d9cf.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  hierarchy.html  hierarchy.js  index.html  mat2f_8h_source.html  mat3f_8h_source.html  md__r_e_a_d_m_e.html  md_doc_2structral__design.html  navtreedata.js  navtreeindex0.js  pages.html  position_8h_source.html  spatial_8h_source.html  structcrystal_1_1spatial_1_1trans-members.html  structcrystal_1_1spatial_1_1trans.html  (+4 more)
include/CrystalSpatial/: cluster_index.h  const_object_index.h  const_space_index.h  const_subspace_index.h  format.h  index.h  matrix_data.h  object.h  object_index.h  position.h  position_index.h  space.h  space_definition.h  space_index.h  spatial.h  subspace.h  subspace_index.h  transformation.h  vector.h  vector_data.h
lib/CrystalBase/: CMakeLists.txt
lib/glm/: CMakeLists.txt
src/: format.cpp  index.cpp  matrix_data.cpp  space.cpp  spatial.cpp  subspace.cpp  transformation.cpp  vector.cpp  vector_data.cpp
test/: CMakeLists.txt  test.cpp
(+44 files in other folders)
